Refactor error handling and constants in Admin services for improved readability