@@ -1,8 +1,6 @@
 package com.grummans.noyblog.services.client;
 
-import com.grummans.noyblog.dto.CategoryDTO;
 import com.grummans.noyblog.dto.PostDTO;
-import com.grummans.noyblog.dto.UserDTO;
 import com.grummans.noyblog.mapper.CategoryMapper;
 import com.grummans.noyblog.mapper.PostMapper;
 import com.grummans.noyblog.mapper.TagMapper;
@@ -17,11 +15,15 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ClientPostService {
+
+    private static final String STATUS_PUBLISHED = "PUBLISHED";
+    private static final String ERROR_CATEGORY_NOT_FOUND = "Category not found with id: ";
+    private static final String ERROR_POST_NOT_FOUND = "Post not found with id: ";
+    private static final String ERROR_AUTHOR_NOT_FOUND = "Author not found with id: ";
 
     private final FileService fileService;
     private final PostRepository postRepository;
@@ -33,100 +35,74 @@ public class ClientPostService {
     private final PostMapper postMapper;
     private final TagMapper tagMapper;
 
-    public List<PostDTO.PostForClientDTO> getAllPosts(){
-        return postRepository.findAllByStatus("PUBLISHED").stream()
-                .map(post -> {
-                    PostDTO.PostForClientDTO postDTO = postMapper.toPostDTOForClient(post);
-
-                    Categories category = categoryRepository.findById(post.getCategoryId())
-                            .orElseThrow(() -> new IllegalArgumentException("Category not found with id: " + post.getCategoryId()));
-                    CategoryDTO.CategorySimpleDTO categoryDTO = categoryMapper.toCategorySimpleDTO(category);
-                    postDTO.setCategory(categoryDTO);
-
-                    List<Tags> tags = postTagsRepository.findByPostId(post.getId());
-                    postDTO.setTags(tags.stream()
-                            .map(tagMapper::toTagSimpleDTO)
-                            .collect(Collectors.toList()));
-
-                    return postDTO;
-                })
+    public List<PostDTO.PostForClientDTO> getAllPosts() {
+        return postRepository.findAllByStatus(STATUS_PUBLISHED).stream()
+                .map(this::mapToPostForClientDTO)
                 .toList();
     }
 
-    public List<PostDTO.PostForClientDTO> getFeaturedPosts(){
-        return postRepository.findByStatusAndIsFeatured("PUBLISHED", true).stream()
-                .map(post -> {
-                    PostDTO.PostForClientDTO postDTO = postMapper.toPostDTOForClient(post);
-
-                    Categories category = categoryRepository.findById(post.getCategoryId())
-                            .orElseThrow(() -> new IllegalArgumentException("Category not found with id: " + post.getCategoryId()));
-                    CategoryDTO.CategorySimpleDTO categoryDTO = categoryMapper.toCategorySimpleDTO(category);
-                    postDTO.setCategory(categoryDTO);
-
-                    List<Tags> tags = postTagsRepository.findByPostId(post.getId());
-                    postDTO.setTags(tags.stream()
-                            .map(tagMapper::toTagSimpleDTO)
-                            .collect(Collectors.toList()));
-
-                    return postDTO;
-                })
+    public List<PostDTO.PostForClientDTO> getFeaturedPosts() {
+        return postRepository.findByStatusAndIsFeatured(STATUS_PUBLISHED, true).stream()
+                .map(this::mapToPostForClientDTO)
                 .toList();
     }
 
-    public PostDTO.Res getDetailPost(int postId){
-
+    public PostDTO.Res getDetailPost(int postId) {
         Posts post = postRepository.findById(postId)
-                .orElseThrow(() -> new RuntimeException("Post not found with id: " + postId));
+                .orElseThrow(() -> new IllegalArgumentException(ERROR_POST_NOT_FOUND + postId));
 
-        PostDTO.Res postDTO = postMapper.toPostDTO(post);
+        return mapToPostRes(post, postId);
+    }
 
-        Users author = usersRepository.findById(post.getAuthorId())
-                .orElseThrow(() -> new IllegalArgumentException("Author not found with id: " + post.getAuthorId()));
-        UserDTO.AuthorDTO authorDTO = userMapper.toAuthorDTO(author);
-        postDTO.setAuthor(authorDTO);
+    public PostDTO.Res getDetailPostBySlug(String slug) {
+        Posts post = postRepository.findBySlug(slug);
+        if (post == null) {
+            throw new IllegalArgumentException("Post not found with slug: " + slug);
+        }
+
+        return mapToPostRes(post, post.getId());
+    }
+
+    // ==================== HELPER METHODS ====================
+
+    /**
+     * Map post entity to PostForClientDTO with category and tags
+     */
+    private PostDTO.PostForClientDTO mapToPostForClientDTO(Posts post) {
+        PostDTO.PostForClientDTO postDTO = postMapper.toPostDTOForClient(post);
 
         Categories category = categoryRepository.findById(post.getCategoryId())
-                .orElseThrow(() -> new IllegalArgumentException("Category not found with id: " + post.getCategoryId()));
-        CategoryDTO.CategorySimpleDTO categoryDTO = categoryMapper.toCategorySimpleDTO(category);
-        postDTO.setCategory(categoryDTO);
+                .orElseThrow(() -> new IllegalArgumentException(ERROR_CATEGORY_NOT_FOUND + post.getCategoryId()));
+        postDTO.setCategory(categoryMapper.toCategorySimpleDTO(category));
 
         List<Tags> tags = postTagsRepository.findByPostId(post.getId());
         postDTO.setTags(tags.stream()
                 .map(tagMapper::toTagSimpleDTO)
-                .collect(Collectors.toList()));
-
-        List<PostAttachments> attachments = fileService.getPostAttachments(postId);
-        postDTO.setAttachments(attachments);
+                .toList());
 
         return postDTO;
     }
 
-    public PostDTO.Res getDetailPostBySlug(String slug){
-
-        Posts post = postRepository.findBySlug(slug);
-        if (post == null) {
-            throw new RuntimeException("Post not found with slug: " + slug);
-        }
-
+    /**
+     * Map post entity to PostDTO.Res with author, category, tags and attachments
+     */
+    private PostDTO.Res mapToPostRes(Posts post, int postId) {
         PostDTO.Res postDTO = postMapper.toPostDTO(post);
 
         Users author = usersRepository.findById(post.getAuthorId())
-                .orElseThrow(() -> new IllegalArgumentException("Author not found with id: " + post.getAuthorId()));
-        UserDTO.AuthorDTO authorDTO = userMapper.toAuthorDTO(author);
-        postDTO.setAuthor(authorDTO);
+                .orElseThrow(() -> new IllegalArgumentException(ERROR_AUTHOR_NOT_FOUND + post.getAuthorId()));
+        postDTO.setAuthor(userMapper.toAuthorDTO(author));
 
         Categories category = categoryRepository.findById(post.getCategoryId())
-                .orElseThrow(() -> new IllegalArgumentException("Category not found with id: " + post.getCategoryId()));
-        CategoryDTO.CategorySimpleDTO categoryDTO = categoryMapper.toCategorySimpleDTO(category);
-        postDTO.setCategory(categoryDTO);
+                .orElseThrow(() -> new IllegalArgumentException(ERROR_CATEGORY_NOT_FOUND + post.getCategoryId()));
+        postDTO.setCategory(categoryMapper.toCategorySimpleDTO(category));
 
         List<Tags> tags = postTagsRepository.findByPostId(post.getId());
         postDTO.setTags(tags.stream()
                 .map(tagMapper::toTagSimpleDTO)
-                .collect(Collectors.toList()));
+                .toList());
 
-        List<PostAttachments> attachments = fileService.getPostAttachments(post.getId());
-        postDTO.setAttachments(attachments);
+        postDTO.setAttachments(fileService.getPostAttachments(postId));
 
         return postDTO;
     }
